2019-04-10  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* who-is-on-app.rkt: *name-jname* 辞書
	* call/cc 初利用！(j name)
	* アップデート (get "/list")

2019-04-09  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.10.1
	* Makefile: install weekday.rkt

	* 0.10
	* weekday.rkt: merged.

2019-04-03  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.9.5
	あれ？0.9.4 飛ばしちゃったか？
	* who-is-on-app.rkt: gregor 見つけた。sunday? saturday? 利用して
	weekday? を定義。

	* 0.9.3 vm2019 で git pull しても、新しくならない。どうして？
	make install で VERSION をコピーするようにしよう。

	* 0.9.2 hotfix が期待通りに実行できなかった模様。新たに 0.9.2 リリース。

	* 0.9.1 update Makefile, who-is-on-app.rkt
	* グローバル変数 *users* の除去

	* 0.9 /list
	* who-is-on-app.rkt: wifis, dates-all.

2019-03-28  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.8
	* who-is-on-app.rkt: define funtion 'now'
	status? use the 'now' function

	* Makefile (production): working tree で sed しない。
	basic auth

2019-03-25  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.7.1
	who-is-on-app.rkt: asynchronous update.

2019-03-23  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.7 who-is-on-app.rkt: status? を定義。
	過去１時間以内に記録が見つかる場合、/users に赤で表示。

2019-03-18  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* update README.md
	* remove useless conf/crontab
	* who-is-on.service:EnvironmentFile must be /srv/who-is-on/.env

2019-03-17  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.6.1 Makefile (install-systemd): systemd のユーザからのインストール先は
	/lib/systemd/system でした。

	* 0.6 who-is-on-app.rkt: get "/"
	* env-template にマジ設定の一部を
	* .gitignore に who-is-on.sqlite3, .env, update.log を無視する


2019-03-16  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.5.5
	* Makefile (install)
	* Makefile (production, development): production 用に url を書き換える。

2019-03-14  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>

	* 0.5.4 update.sh: cron ではなく、コマンド at に 55 \pm 10 で
	自分自身を呼び出すスクリプト。
	* env/.placeholder: 動作に必要な環境変数を .placeholder に書いておく。
	* who-is-on-app.rkt: 127.0.0.1 しかリッスンしない。