@@ -2,7 +2,9 @@
 
 	* who-is-on-app.rkt: *name-jname* 辞書
 	* call/cc 初利用！(j name)
-	* アップデート (get "/list")
+	* update (get "/list")
+	* update (get "/users")
+	* get/post users に jname 分追加
 
 2019-04-09  Hiroshi Kimura  <hiroshi.kimura.0331@gmail.com>
 
